--- a/freeBalance/html/registration.html
+++ b/freeBalance/html/registration.html
@@ -74,7 +74,7 @@
   <!-- header -->
   <header class="my-header">
     <div class="profile">
-      <img src="../img/person.png" class="head-photo">
+      <img src="../img/no-data.png" class="head-photo">
     </div>
     <p class="userName">--</p>
   </header>
@@ -178,7 +178,7 @@
             $('#height').val('');
             $.toast("身高不能为负数", "text");
           }
-          if ($('#height').val() > 300) {
+          if ($('#height').val() > 317) {
             $('#height').val('');
             $.toast("身高超过最大值", "text");
           }
@@ -188,6 +188,8 @@
         $('#confirm').click(function(){
           var times = $('#age').val();
           var height = $('#height').val();
+          // 去除height小数
+          height = Math.floor(height);
 
           console.log(times);
           console.log(sex);
