--- a/freeBalance/html/shopDetails.html
+++ b/freeBalance/html/shopDetails.html
@@ -14,11 +14,11 @@
   <title></title>
   <style type="text/css">
     .bigImg {
-      height: 9.375rem;
+      height: 10.9375rem;
     }
     .bigImg img {
-      width: 23.4375rem;
-      height: 9.375rem
+      width: 100%;
+      height: 100%;
     }
     .detailsBox {
       height: 5.34375rem;
@@ -77,6 +77,9 @@
     .recommendBox ul li:nth-child(2n) {
       margin-left: 0.45rem;
     }
+    .recommendBox ul li p {
+      margin: 0.5rem;
+    }
     .recommendBox ul li img {
       width: 10.625rem;
       height: 8.21875rem;
@@ -115,7 +118,7 @@
     <div class="recommendBox">
       <ul class="clearfix color-333">
         <!-- <li>
-          <img src="../img/shopDetail02.jpg"/>
+          <img src="../img/no-data.png"/>
           <p>儿童健康成长体验</p>
         </li> -->
       </ul>
