modified changePerson person

--- a/freeBalance/html/changePerson.html
+++ b/freeBalance/html/changePerson.html
@@ -98,7 +98,7 @@
     <div class="weui-cell">
       <div class="weui-cell__bd">性别</div>
       <div class="weui-cell__ft">
-        <input id="sex" class="weui-input" type="text" value="">
+        <input id="sex" class="weui-input" type="text" value="男">
       </div>
     </div>
     <div class="weui-cell">
