--- a/freeBalance/html/person.html
+++ b/freeBalance/html/person.html
@@ -66,7 +66,7 @@
       font-size: 0.85rem;
       border-bottom: 1px solid #e5e5e5;
     }
-    .user-info .weui-input {
+    .user-info .weui-input, .user-info .weui-cell__ft {
       text-align: right;
       color: #333!important;
     }
