modified input only readonly

--- a/freeBalance/html/person.html
+++ b/freeBalance/html/person.html
@@ -130,7 +130,7 @@
     <div class="weui-cell">
       <div class="weui-cell__bd">年龄</div>
       <div class="weui-cell__ft">
-        <input id="age" class="weui-input" type="text" value="1992-05-23" disabled="disabled" readonly="">
+        <input id="age" class="weui-input" type="text" value="1992-05-23" readonly="">
       </div>
       <a href="./changePerson.html" class="more-row">
         <span></span>
