--- a/freeBalance/html/person.html
+++ b/freeBalance/html/person.html
@@ -66,9 +66,9 @@
       font-size: 0.85rem;
       border-bottom: 1px solid #e5e5e5;
     }
-    .user-info .weui-input, .user-info .weui-cell__ft {
+    .user-info .weui-input {
       text-align: right;
-      color: #333!important;
+      color: #555!important;
     }
     .user-info span.weui-cell__ft {
       margin-left: 6px;
@@ -121,7 +121,7 @@
     <div class="weui-cell">
       <div class="weui-cell__bd">性别</div>
       <div class="weui-cell__ft">
-        <input id="sex" class="weui-input" type="text" value="男" disabled="disabled" readonly="">
+        <input id="sex" class="weui-input" type="text" value="男" readonly="">
       </div>
       <a href="./changePerson.html" class="more-row">
         <span></span>
@@ -139,7 +139,7 @@
     <div class="weui-cell">
       <div class="weui-cell__bd">身高</div>
       <div class="weui-cell__ft height">
-        <input id="height" class="weui-input" type="text" value="120" disabled="disabled" readonly="">
+        <input id="height" class="weui-input" type="text" value="120" readonly="">
       </div>
       <span class="weui-cell__ft">cm</span>
       <a href="./changePerson.html" class="more-row">
