modified gauge.png in index.html

--- a/freeBalance/html/analyse.html
+++ b/freeBalance/html/analyse.html
@@ -118,7 +118,7 @@
   <!-- header -->
   <header class="my-header">
     <div class="profile">
-      <img src="../img/person.png" class="head-photo">
+      <img src="../img/no-data.png" class="head-photo">
     </div>
     <p class="userName">--</p>
     <div class="weui-flex text-center">
@@ -189,6 +189,36 @@
         <div class="weui-media-box__bd">
           <h4 class="weui-media-box__title">运动建议</h4>
           <p id="sportRecommendDesc" class="weui-media-box__desc">根据自身的实际情况选择合适的运动项目，保持一定的运动量。每周运动量不少于5天，每天不少于30分钟，以每天60分钟为佳。</p>
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <!-- lose-recommend -->
+  <div class="sport-recommend weui-panel weui-panel_access">
+    <div class="weui-panel__bd">
+      <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
+        <div class="weui-media-box__hd">
+          <img class="weui-media-box__thumb" src="../img/analyse_12.jpg">
+        </div>
+        <div class="weui-media-box__bd">
+          <h4 class="weui-media-box__title">减肥建议</h4>
+          <p id="sportRecommendDesc" class="weui-media-box__desc">每周锻炼3-5次。日消耗<span>2192</span>大卡，主食粥(1碗)、红薯(213g)、米饭(320)，肉食猪肉(210g)、鸡蛋(2个)、酸奶(150ml)，周减重0.6斤</p>
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <!-- sport-recommend -->
+  <div class="sport-recommend weui-panel weui-panel_access">
+    <div class="weui-panel__bd">
+      <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
+        <div class="weui-media-box__hd">
+          <img class="weui-media-box__thumb" src="../img/analyse_11.jpg">
+        </div>
+        <div class="weui-media-box__bd">
+          <h4 class="weui-media-box__title">睡眠建议</h4>
+          <p id="sportRecommendDesc" class="weui-media-box__desc">你所吃的食物跟你的睡眠质量有关，午餐吃蛋白质类的食物使下午更精神，而晚餐吃碳水化合物类的食物就会有助于睡眠，不过不过晚餐不要吃太晚。</p>
         </div>
       </a>
     </div>
