--- a/freeBalance/html/shopDetails.html
+++ b/freeBalance/html/shopDetails.html
@@ -171,6 +171,9 @@
             }
             $('.recommendBox ul').html(result); 
           }
+        },
+        error: function (xhr) {
+          console.log(xhr.status + ' ' + xhr.statusText);
         }
       });
 
