--- a/freeBalance/html/person.html
+++ b/freeBalance/html/person.html
@@ -121,7 +121,7 @@
     <div class="weui-cell">
       <div class="weui-cell__bd">性别</div>
       <div class="weui-cell__ft">
-        <input id="sex" class="weui-input" type="text" value="男" readonly="">
+        <input id="sex" class="weui-input" type="text" value="--" readonly="">
       </div>
       <a href="./changePerson.html" class="more-row">
         <span></span>
@@ -130,7 +130,7 @@
     <div class="weui-cell">
       <div class="weui-cell__bd">年龄</div>
       <div class="weui-cell__ft">
-        <input id="age" class="weui-input" type="text" value="1992-05-23" readonly="">
+        <input id="age" class="weui-input" type="text" value="--" readonly="">
       </div>
       <a href="./changePerson.html" class="more-row">
         <span></span>
@@ -139,7 +139,7 @@
     <div class="weui-cell">
       <div class="weui-cell__bd">身高</div>
       <div class="weui-cell__ft height">
-        <input id="height" class="weui-input" type="text" value="120" readonly="">
+        <input id="height" class="weui-input" type="text" value="--" readonly="">
       </div>
       <span class="weui-cell__ft">cm</span>
       <a href="./changePerson.html" class="more-row">
@@ -197,6 +197,9 @@
           } else {
             $.toast(data.msg, "cancel");
           }
+        },
+        error: function (xhr) {
+          console.log(xhr.status + ' ' + xhr.statusText);
         }
       });
 
