--- a/freeBalance/html/registration.html
+++ b/freeBalance/html/registration.html
@@ -240,6 +240,7 @@
                   off = 0; //请求失败时重置off
                   $.hideLoading();
                   $.toptip('注册失败', 'error');
+                  console.log(xhr.status + ' ' + xhr.statusText);
                 }
               });
           }
